// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/rosas/onex.
//

syntax = "proto3";

package cacheserver.v1; // 告诉编译器此文件使用什么版本的语法

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "github.com/rosas/onex/pkg/api/cacheserver/v1;v1";

service CacheServer {
  rpc Set(SetRequest) returns (google.protobuf.Empty) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Del(DelRequest) returns (google.protobuf.Empty) {}

  rpc SetSecret(SetSecretRequest) returns (google.protobuf.Empty) {}
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
  rpc DelSecret(DelSecretRequest) returns (google.protobuf.Empty) {}
}

message SetRequest {
  string namespace = 1;
  string key = 2;
  google.protobuf.Any value = 3;
  optional google.protobuf.Duration expire = 4;
}

message GetRequest {
  string namespace = 1;
  string key = 2;
}

message GetResponse {
  google.protobuf.Any value = 1;
  google.protobuf.Duration expire = 2;
}

message DelRequest {
  string namespace = 1;
  string key = 2;
}

message SetSecretRequest {
  string key = 1;
  string name = 2 [(validate.rules).string = {min_len: 1, max_len: 253}];
  optional google.protobuf.Duration expire = 3;
  string description = 4 [(validate.rules).string.max_len = 256];
}

message GetSecretRequest {
  string key = 1;
}

message DelSecretRequest {
  string key = 1;
}

message GetSecretResponse{
  string userID = 1;
  string name = 2;
  string secretID= 3;
  string secretKey= 4;
  int64 expires = 5;
  int32 status= 6;
  string description = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
}
